# CareerAI-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app_instance.py  db.py  docker-compose.yaml  kb.md  log_config.py  main.py  postgress_db.py  pyproject.toml  redis_config.py  requirements.txt  server.py  websocket_manger.py  x.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1585ed76e05f_updated_msg_table.py  91fd119808af_add_chatmsg_table.py  cecc37747a91_create_initial_tables.py  f5bd795e80f3_update_schema_fields_types.py  fc8c871f5dd7_create_msg_tables.py  fe35946d397e_add_email_column.py
archive/: internship_pre_rag.py  kb.md
assistant/: config.py
assistant/resume/: parse_userAudio_input.py
assistant/resume/chat/: bullet_agent.py  education_agent.py  graph.py  handoff_tools.py  internship_agent.py  llm.py  llm_model.py  main_agent.py  swarm.py  token_count.py  tools.py
assistant/resume/chat/acads_agent/: agent_2.py  functions.py  mappers.py  tools.py
assistant/resume/chat/certifications_agent/: agent.py  functions.py  tools.py
assistant/resume/chat/education_agent/: agent.py  tools.py
assistant/resume/chat/extra_curricular_agent/: agent.py  tools.py
assistant/resume/chat/internship_agent/: agent.py  agent_copy.py  agent_copy_2.py  agent_copy_2_copy.py  functions.py  handoff_tools.py  instruction.json  mappers.py  tools.py
assistant/resume/chat/main_agent/: agent.py  tools.py
assistant/resume/chat/position_of_responsibility_agent/: agent.py  agent_2.py  functions.py  tools.py
assistant/resume/chat/scholastic_achievement_agent/: agent.py  tools.py
assistant/resume/chat/utils/: apply_patches.py  common_tools.py  field_mapping.py  helpers.py  patch_validator.py  query_vector_db.py  save_chat_msg.py  tools.py  update_summar_skills.py  ws_utils.py
assistant/resume/roles/: product.json  tech.json
config/: chroma_config.py  db.py  env_config.py  jinja_env.py  log_config.py  postgress_db.py  redis_config.py
controllers/: user_controller.py
fastapi-backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  db.py  main.py  requirements.txt  server.py
fastapi-backend/alembic/: env.py
fastapi-backend/controllers/: user_controller.py
fastapi-backend/middlewares/: verify_user.py
fastapi-backend/models/: user_model.py
fastapi-backend/routes/: public_routes.py  user_routes.py
fastapi-backend/utils/: jwt.py  schemas.py
fastapi-backend/validation/: user_types.py
middlewares/: verify_user.py
models/: chat_msg_model.py  resume_model.py  user_mode.py  user_model.py
routes/: public_routes.py  user_routes.py
services/: redis_service.py
templates/: resume_template.html
utils/: convert_objectIds.py  extract_pdf.py  jwt.py  mapper.py  safe_trim_msg.py  securiy.py  send_otp.py  verify_token.py
validation/: new_resume_validation.py  resume_validation.py  user_types.py
(+34 files in other folders)
