[project]
name = "careerai-backend"
version = "0.1.0"
description = "FastAPI backend for CareerAI"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "redis",
    "python-dotenv",
    "requests",
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "passlib[bcrypt]",
    "pyjwt",
    "email-validator",
    "websockets",
    "orjson",
    "langchain",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint-redis",
    "redisvl",
    "bcrypt<4.1",
    "langgraph-swarm>=0.0.14",
    "langchain-google-genai>=2.0.10",
    "google-generativeai>=0.8.5",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pip-check-reqs",
    "deptry>=0.23.1",
]
