[project]
name = "careerai-backend"
version = "0.1.0"
description = "FastAPI backend for CareerAI"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "redis",
    "python-dotenv",
    "requests",
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "passlib[bcrypt]",
    "pyjwt",
    "email-validator",
    "websockets",
    "orjson",
    "langchain",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint-redis",
    "redisvl",
    "bcrypt<4.1",
    "langgraph-swarm>=0.0.14",
    "langchain-google-genai>=2.0.10",
    "google-generativeai>=0.8.5",
    "asyncpg>=0.30.0",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
    "authlib>=1.6.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11.7",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pip-check-reqs",
    "deptry>=0.23.1",
]
