[project]
name = "careerai-backend"
version = "0.1.0"
description = "FastAPI backend for CareerAI"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "redis",
    "python-dotenv",
    "requests",
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "passlib[bcrypt]",
    "pyjwt",
    "email-validator",
    "websockets",
    "orjson",
    "langchain",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint-redis",
    "redisvl",
    "bcrypt<4.1",
    "langgraph-swarm>=0.0.14",
    "langchain-google-genai>=2.0.10",
    "google-generativeai>=0.8.5",
    "asyncpg>=0.30.0",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
    "authlib>=1.6.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11.7",
    "langchain-chroma>=0.2.5",
    "chromadb>=1.0.20",
    "langchain-community>=0.3.29",
    "sentence-transformers>=5.1.0",
    "langchain-huggingface>=0.3.1",
    "python-toon>=0.1.2",
    "rich>=14.1.0",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pip-check-reqs",
    "deptry>=0.23.1",
]
